# gocq_py

./: .gitignore  README.md  api.py  datebase.py  gunicorn_config.py  index.py  pyproject.toml
cfg/: botConfig.py  botconfig.example.yaml  openAiConfig.example.yaml
modules/: __init__.py  asr.py  binggpt.py  caiyun.py  chatgptv3.py  render.py  xunfei.py  xunfeigpt.py
