[tool.poetry]
name = "gocq-py"
version = "0.1.0"
description = ""
authors = ["copurxia <copur@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gocq_py"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = {extras = ["async"], version = "^2.2.3"}
loguru = "^0.6.0"
gevent = "^22.10.2"
pyyaml = "^6.0"
requests = "^2.28.2"
edgegpt = "^0.1.21"
revchatgpt = "^4.0.6"
tls-client = "^0.1.8"
pymongo = "^4.3.3"
tencentcloud-sdk-python = "^3.0.852"
tencentcloud-sdk-python-asr = "^3.0.851"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
